--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "alpinejs": "^3.14.1",
+    "gh-pages": "^6.1.1",
     "vite": "^5.4.6"
   }
 }
