--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "copy-assets": "node copy-assets.js",
     "preview": "vite preview",
     "deploy": "gh-pages -d dist --cname vantage.thometnanni.net"
   },
@@ -13,6 +14,6 @@
   "description": "",
   "dependencies": {
     "gh-pages": "^6.1.1",
-    "vite": "^5.4.6"
+    "vite": "^5.4.9"
   }
 }
